# gh-actions-c-test

./: CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml  parametric_build.yml
lib/: CMakeLists.txt  foo.c  foo.h
lib/foo/: CMakeLists.txt  config.h.in  foo.c  foo.h
lib/log/: CMakeLists.txt  log.c  log.h
src/: CMakeLists.txt  config.h.in  main.c
